--- a/app/view/component/nav.html
+++ b/app/view/component/nav.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="/">Navbar</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
         aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -8,7 +8,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Home
+                <a class="nav-link" href="/">Home
                     <span class="sr-only">(current)</span>
                 </a>
             </li>
@@ -35,5 +35,20 @@
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
+        <ul class="navbar-nav">
+            {% if ctx.isAuthenticated() %}
+            <li class="nav-item">
+                <a class="nav-link" href="#">[{{ ctx.user.username }}]</a>
+            </li>
+            {% endif %} {% if ctx.isAuthenticated() %}
+            <li class="nav-item">
+                <a class="nav-link" href="/logout">登出</a>
+            </li>
+            {% else %}
+            <li class="nav-item">
+                <a class="nav-link" href="/login">登入</a>
+            </li>
+            {% endif %}
+        </ul>
     </div>
 </nav>
